Updated .play() to .pause() to disable the playing on the video, and added preload="none" to stop any video downloading in chrome

--- a/index.html
+++ b/index.html
@@ -217,20 +217,10 @@ src="https://www.facebook.com/tr?id=FB_PIXEL_ID&amp;ev=PageView&amp;noscript=1"
 
 
 <div class="marquee-video">
-  <video>
+  <video controls preload="none">
     <source type="video/mp4">
   </video>
 </div>
-
-
-
-
-
-
-
-
-
-
 
       <div class="content-wrapper phase-">
         <div class="container">
