--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="https://use.typekit.net/rba5nhj.css">
 
     <link rel="stylesheet" href="_assets/app.css" />
 
@@ -62,9 +61,10 @@
 
 
     <script type="text/javascript" src="https://use.typekit.net/rba5nhj.js"></script>
+
     <script type="text/javascript">try{Typekit.load({async:true});}catch(e){}</script>
 
-    <script>
+    <!--script>
 !function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?
 n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;
 n.push=n;n.loaded=!0;n.version='2.0';n.queue=[];t=b.createElement(e);t.async=!0;
@@ -87,10 +87,8 @@ src="https://www.facebook.com/tr?id=FB_PIXEL_ID&amp;ev=PageView&amp;noscript=1"
   // Insert Twitter Pixel ID and Standard Event data below
   twq('init', 'nvgo2');
   twq('track', 'PageView');
-</script>
+</script-->
 
-
-      <script src="https://assets.adobedtm.com/659ec8ada5450db95675e43beaaae92399591a11/satelliteLib-46e65db5bb0c375f8f64619be31cc9b29acf4867.js"></script>
 
 
   </head>
@@ -650,18 +648,11 @@ src="https://www.facebook.com/tr?id=FB_PIXEL_ID&amp;ev=PageView&amp;noscript=1"
 
 
 
-
-
-
-      <script src='_assets/homepage.js.html' type="text/javascript"></script>
-
-
-
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   </body>
 
 
-  <script type="text/javascript">try { _satellite.pageBottom(); } catch(e) { }</script>
+  <!--script type="text/javascript">try { _satellite.pageBottom(); } catch(e) { }</script-->
 
 
 
