Switcheed background from .jpg to .png

--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@ src="https://www.facebook.com/tr?id=FB_PIXEL_ID&amp;ev=PageView&amp;noscript=1"
 </div>
 
 <div class="flex-col col-show-hide multi double collapse" id="gal-sponsors">
-  <div id="home-gallery" class="col show-for-large" style="background-image:url('_assets/images/content/top10.png');">
+  <div id="home-gallery" class="col show-for-large" style="background-image:url('_assets/images/content/top10.jpg');">
     <a href="index.html#" show-hide class="toggle-handle-dark show-hide-static-on-active"></a>
     <h3 class="col-header">Check out the pics <br>from last year's MAX.</h3>
 
