Updated the home link to go to / and added in H2 push for the CSS and header logo

--- a/agenda/schedule/index.html
+++ b/agenda/schedule/index.html
@@ -81,7 +81,7 @@ src="https://www.facebook.com/tr?id=FB_PIXEL_ID&amp;ev=PageView&amp;noscript=1"
       <nav class="global-nav">
   <div class="row small-collapse medium-uncollapse">
     <div class="small-10 large-2 columns">
-      <a href="../../index.html"><img src="../../_assets/images/global/max-logo.png" class="adobe-max-logo" alt="Adobe MAX Logo" /></a>
+      <a href="/"><img src="../../_assets/images/global/max-logo.png" class="adobe-max-logo" alt="Adobe MAX Logo" /></a>
     </div>
     <div class="large-10 show-for-large columns">
       <ul class="dropdown menu is-loading align-center">
@@ -563,7 +563,7 @@ src="https://www.facebook.com/tr?id=FB_PIXEL_ID&amp;ev=PageView&amp;noscript=1"
 
     </div>
 
-    <script src="../../_assets/app.js"></script>
+    <script src="../../_assets/min/app-min.js"></script>
 
 
 
