--- a/speakers/index.html
+++ b/speakers/index.html
@@ -8261,7 +8261,7 @@ With a background in logo design, packaging and print collateral, she applies th
 
     </div>
 
-    <script src="../_assets/app.js"></script>
+    <script src="../_assets/min/app-min.js"></script>
 
 
 
