--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -5484,7 +5484,7 @@ All of our products are available to download and try in your own environment wi
 
     </div>
 
-    <script src="../_assets/app.js"></script>
+    <script src="../_assets/min/app-min.js"></script>
 
 
 
