--- a/code-of-conduct/index.html
+++ b/code-of-conduct/index.html
@@ -289,7 +289,7 @@ src="https://www.facebook.com/tr?id=FB_PIXEL_ID&amp;ev=PageView&amp;noscript=1"
 
     </div>
 
-    <script src="../_assets/app.js"></script>
+    <script src="../_assets/min/app-min.js"></script>
 
 
 
